Strip new lines in argLine and debugArgLine parameters (#77)